// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelatedSystems component renders correctly when scoringweight equal & names equal 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 title Typography-underline css-je89nd-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1149tz3-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-vb4yt3-MuiGrid2-root"
              data-testid="grid-item"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-c35yjo-MuiButtonBase-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-1 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <img
                  alt="system-1"
                  class="OverviewCard-headerPicture css-10hd0hb-Media"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="OverviewCard-body"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 OverviewCard-title OverviewCard-noBrandLogo css-10q7alf-MuiTypography-root"
                    data-testid="overview-card-body-title"
                  >
                    system-1
                  </h5>
                  <div
                    class="OverviewCard-text css-fm25tm"
                  >
                    system-desc
                  </div>
                  <div
                    class="css-1tho2wt"
                    data-testid="overview-card-body-footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                      tabindex="0"
                      type="button"
                    >
                      MC: sdp.system.readMore
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-vb4yt3-MuiGrid2-root"
              data-testid="grid-item"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-c35yjo-MuiButtonBase-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-1 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <img
                  alt="system-1"
                  class="OverviewCard-headerPicture css-10hd0hb-Media"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="OverviewCard-body"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 OverviewCard-title OverviewCard-noBrandLogo css-10q7alf-MuiTypography-root"
                    data-testid="overview-card-body-title"
                  >
                    system-1
                  </h5>
                  <div
                    class="OverviewCard-text css-fm25tm"
                  >
                    system-desc
                  </div>
                  <div
                    class="css-1tho2wt"
                    data-testid="overview-card-body-footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                      tabindex="0"
                      type="button"
                    >
                      MC: sdp.system.readMore
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with no systems 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 title Typography-underline css-je89nd-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1149tz3-MuiGrid2-root"
            data-testid="grid-container"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with scoringweight 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 title Typography-underline css-je89nd-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1149tz3-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-vb4yt3-MuiGrid2-root"
              data-testid="grid-item"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-c35yjo-MuiButtonBase-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-Name - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <img
                  alt="system-Name"
                  class="OverviewCard-headerPicture css-10hd0hb-Media"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="OverviewCard-body"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 OverviewCard-title OverviewCard-noBrandLogo css-10q7alf-MuiTypography-root"
                    data-testid="overview-card-body-title"
                  >
                    system-Name
                  </h5>
                  <div
                    class="OverviewCard-text css-fm25tm"
                  >
                    system-desc
                  </div>
                  <div
                    class="css-1tho2wt"
                    data-testid="overview-card-body-footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                      tabindex="0"
                      type="button"
                    >
                      MC: sdp.system.readMore
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-vb4yt3-MuiGrid2-root"
              data-testid="grid-item"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-c35yjo-MuiButtonBase-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-Name - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <img
                  alt="system-Name"
                  class="OverviewCard-headerPicture css-10hd0hb-Media"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="OverviewCard-body"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 OverviewCard-title OverviewCard-noBrandLogo css-10q7alf-MuiTypography-root"
                    data-testid="overview-card-body-title"
                  >
                    system-Name
                  </h5>
                  <div
                    class="OverviewCard-text css-fm25tm"
                  >
                    system-desc
                  </div>
                  <div
                    class="css-1tho2wt"
                    data-testid="overview-card-body-footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                      tabindex="0"
                      type="button"
                    >
                      MC: sdp.system.readMore
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with scoringweight equal & names sorted opposite 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 title Typography-underline css-je89nd-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1149tz3-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-vb4yt3-MuiGrid2-root"
              data-testid="grid-item"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-c35yjo-MuiButtonBase-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-1 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <img
                  alt="system-1"
                  class="OverviewCard-headerPicture css-10hd0hb-Media"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="OverviewCard-body"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 OverviewCard-title OverviewCard-noBrandLogo css-10q7alf-MuiTypography-root"
                    data-testid="overview-card-body-title"
                  >
                    system-1
                  </h5>
                  <div
                    class="OverviewCard-text css-fm25tm"
                  >
                    system-desc
                  </div>
                  <div
                    class="css-1tho2wt"
                    data-testid="overview-card-body-footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                      tabindex="0"
                      type="button"
                    >
                      MC: sdp.system.readMore
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-vb4yt3-MuiGrid2-root"
              data-testid="grid-item"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-c35yjo-MuiButtonBase-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-2 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <img
                  alt="system-2"
                  class="OverviewCard-headerPicture css-10hd0hb-Media"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="OverviewCard-body"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 OverviewCard-title OverviewCard-noBrandLogo css-10q7alf-MuiTypography-root"
                    data-testid="overview-card-body-title"
                  >
                    system-2
                  </h5>
                  <div
                    class="OverviewCard-text css-fm25tm"
                  >
                    system-desc
                  </div>
                  <div
                    class="css-1tho2wt"
                    data-testid="overview-card-body-footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                      tabindex="0"
                      type="button"
                    >
                      MC: sdp.system.readMore
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with scoringweight equal 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 title Typography-underline css-je89nd-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1149tz3-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-vb4yt3-MuiGrid2-root"
              data-testid="grid-item"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-c35yjo-MuiButtonBase-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-Name - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <img
                  alt="system-Name"
                  class="OverviewCard-headerPicture css-10hd0hb-Media"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="OverviewCard-body"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 OverviewCard-title OverviewCard-noBrandLogo css-10q7alf-MuiTypography-root"
                    data-testid="overview-card-body-title"
                  >
                    system-Name
                  </h5>
                  <div
                    class="OverviewCard-text css-fm25tm"
                  >
                    system-desc
                  </div>
                  <div
                    class="css-1tho2wt"
                    data-testid="overview-card-body-footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                      tabindex="0"
                      type="button"
                    >
                      MC: sdp.system.readMore
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-vb4yt3-MuiGrid2-root"
              data-testid="grid-item"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-c35yjo-MuiButtonBase-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-Name - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <img
                  alt="system-Name"
                  class="OverviewCard-headerPicture css-10hd0hb-Media"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="OverviewCard-body"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 OverviewCard-title OverviewCard-noBrandLogo css-10q7alf-MuiTypography-root"
                    data-testid="overview-card-body-title"
                  >
                    system-Name
                  </h5>
                  <div
                    class="OverviewCard-text css-fm25tm"
                  >
                    system-desc
                  </div>
                  <div
                    class="css-1tho2wt"
                    data-testid="overview-card-body-footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                      tabindex="0"
                      type="button"
                    >
                      MC: sdp.system.readMore
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with systems 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 title Typography-underline css-je89nd-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1149tz3-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-vb4yt3-MuiGrid2-root"
              data-testid="grid-item"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-c35yjo-MuiButtonBase-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-Name - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <img
                  alt="system-Name"
                  class="OverviewCard-headerPicture css-10hd0hb-Media"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="OverviewCard-body"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 OverviewCard-title OverviewCard-noBrandLogo css-10q7alf-MuiTypography-root"
                    data-testid="overview-card-body-title"
                  >
                    system-Name
                  </h5>
                  <div
                    class="OverviewCard-text css-fm25tm"
                  >
                    system-desc
                  </div>
                  <div
                    class="css-1tho2wt"
                    data-testid="overview-card-body-footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                      tabindex="0"
                      type="button"
                    >
                      MC: sdp.system.readMore
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly without categories 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 title Typography-underline css-je89nd-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1149tz3-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-vb4yt3-MuiGrid2-root"
              data-testid="grid-item"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-c35yjo-MuiButtonBase-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-Name - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <img
                  alt="system-Name"
                  class="OverviewCard-headerPicture css-10hd0hb-Media"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="OverviewCard-body"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 OverviewCard-title OverviewCard-noBrandLogo css-10q7alf-MuiTypography-root"
                    data-testid="overview-card-body-title"
                  >
                    system-Name
                  </h5>
                  <div
                    class="OverviewCard-text css-fm25tm"
                  >
                    system-desc
                  </div>
                  <div
                    class="css-1tho2wt"
                    data-testid="overview-card-body-footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                      tabindex="0"
                      type="button"
                    >
                      MC: sdp.system.readMore
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders systems correctly without classifications 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 title Typography-underline css-je89nd-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1149tz3-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-vb4yt3-MuiGrid2-root"
              data-testid="grid-item"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-c35yjo-MuiButtonBase-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-Name - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <img
                  alt="system-Name"
                  class="OverviewCard-headerPicture css-10hd0hb-Media"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="OverviewCard-body"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 OverviewCard-title OverviewCard-noBrandLogo css-10q7alf-MuiTypography-root"
                    data-testid="overview-card-body-title"
                  >
                    system-Name
                  </h5>
                  <div
                    class="OverviewCard-text css-fm25tm"
                  >
                    system-desc
                  </div>
                  <div
                    class="css-1tho2wt"
                    data-testid="overview-card-body-footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                      tabindex="0"
                      type="button"
                    >
                      MC: sdp.system.readMore
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SystemCard renders correctly with related system 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-vb4yt3-MuiGrid2-root"
    data-testid="grid-item"
  >
    <a
      class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-c35yjo-MuiButtonBase-root"
      data-gtm="{\\"id\\":\\"gtm-id\\"}"
      href="/en/related-system-path/"
      tabindex="0"
    >
      <img
        alt="related-ssytem-name"
        class="OverviewCard-headerPicture css-10hd0hb-Media"
        src="http://localhost:8000/image-main-source.jpg"
      />
      <div
        class="OverviewCard-body"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5 OverviewCard-title OverviewCard-noBrandLogo css-10q7alf-MuiTypography-root"
          data-testid="overview-card-body-title"
        >
          related-ssytem-name
        </h5>
        <div
          class="OverviewCard-text css-fm25tm"
        >
          related-short-desc
        </div>
        <div
          class="css-1tho2wt"
          data-testid="overview-card-body-footer"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            MC: sdp.system.readMore
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</div>
`;

exports[`SystemCard renders correctly with system from elasticsearch 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-vb4yt3-MuiGrid2-root"
    data-testid="grid-item"
  >
    <a
      class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-c35yjo-MuiButtonBase-root"
      data-gtm="{\\"id\\":\\"gtm-id\\"}"
      href="/en/s/code-name-hashed-code/"
      tabindex="0"
    >
      <img
        alt="name"
        class="OverviewCard-headerPicture css-10hd0hb-Media"
        src="http://localhost:8000/mainSource"
      />
      <div
        class="OverviewCard-body"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5 OverviewCard-title OverviewCard-noBrandLogo css-10q7alf-MuiTypography-root"
          data-testid="overview-card-body-title"
        >
          name
        </h5>
        <div
          class="OverviewCard-text css-fm25tm"
        >
          Short description
        </div>
        <div
          class="css-1tho2wt"
          data-testid="overview-card-body-footer"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            MC: sdp.system.readMore
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</div>
`;
